hphp/hack/test/typecheck/new_self_invariant.php.legacy.exp
File "new_self_invariant.php", line 8, characters 12-21:
Invalid return type (Typing[4110])
File "new_self_invariant.php", line 7, characters 26-28:
This is an int
File "new_self_invariant.php", line 7, characters 26-28:
Considering that this type argument is invariant with respect to D
File "new_self_invariant.php", line 6, characters 9-10:
It is incompatible with a value of generic type Td
